# frontend_and_backend_development

./: README.md
backend/: Cargo.toml
backend/src/: main.rs  models.rs  routes.rs  state.rs
backend/src/handlers/: mod.rs  products.rs  products_handlers.rs  upload.rs  users_handlers.rs
backend/src/models/: mod.rs  product.rs  user.rs
frontend/: test.html
frontend/script/: app.js
frontend/style/: test.css  test.css.map  test.scss
