[package]
name = "rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.6"
actix-files = "0.6"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["fs"] }
futures-util = "0.3"
chrono = "0.4"
utoipa = {version = "5", features = ["actix_extras"]}
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
